Add MongoDB support for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Server
 PORT=3001
 
+# MongoDB (get from MongoDB Atlas - free tier)
+MONGODB_URI=mongodb+srv://username:password@cluster.xxxxx.mongodb.net/?retryWrites=true&w=majority
+
 # Security (generate random strings for production)
 SESSION_SECRET=your-random-session-secret-here
 CODE_SECRET=your-random-code-secret-here
