--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
+    "mongodb": "^7.1.0",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.13"
   }
