Add video storage, admin dashboard, and Discord notifications
- Store videos in MongoDB GridFS instead of email attachments
- Add admin dashboard with video players, approve/reject/delete buttons
- Add storage indicator (512MB MongoDB Atlas limit)
- Replace email notifications with Discord webhooks
- Add automatic scheduling with node-cron:
  - Saturday 10 AM: reminder if not submitted
  - Monday 8 AM: auto-trigger consequence if no approval
- Store sessions in MongoDB (persist across restarts)
- Add /health endpoint for uptime monitoring
- Add "Well done" screen after approval

--- a/.env.example
+++ b/.env.example
@@ -15,18 +15,12 @@ FRIEND_PASSWORD=victor-password-here
 # PayPal (for consequence payments)
 PAYPAL_ME_USERNAME=your-paypal-username
 
-# Email (for video reviews and notifications)
-# Admin (Elias) receives video submissions with approve/reject links
+# Admin email (optional, for reference)
 ADMIN_EMAIL=elias-email@example.com
-# Friend (Victor) receives reminders and consequence notifications
-FRIEND_EMAIL=victor-email@example.com
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
 
-# For email links (your deployed URL)
-APP_URL=http://localhost:3001
+# Discord notifications
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/your-webhook-url
+VICTOR_DISCORD_ID=discord-user-id-here
 
-# Cron secret (for Saturday reminder and deadline check endpoints)
-CRON_SECRET=your-cron-secret
+# For links in notifications (your deployed URL)
+APP_URL=https://your-app.onrender.com
