--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
     "bcrypt": "^6.0.0",
+    "connect-mongo": "^6.0.0",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.19.0",
     "mongodb": "^7.1.0",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.13"
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.13",
+    "resend": "^6.9.1"
   }
 }
